--- a/src/blogpage.html
+++ b/src/blogpage.html
@@ -130,7 +130,7 @@
                     
                     <!-- Trending Card 2 -->
                      <div class="flex flex-col items-center justify-center bg-white rounded-xl overflow-hidden card-shadow  w-[394.66px] h-[332px] p-1.5  transition duration-300 hover:shadow-lg hover:scale-105 ">
-                        <div class="p-4  text-center">Mastering Remote Work Productivity
+                        <div class="p-4  text-center">
                     <img src="/code-mini-project/Picture for Mini project/blog-page/blog-page08.jpg" alt=""Mastering Remote Work Productivity class="w-[346px] h-[192px] rounded-xl  object-cover p-1.5">
                             <h4 class="font-semibold text-gray-800 mb-1 text-lg">Mastering Remote Work Productivity</h4>
                             <p class="text-gray-500 text-sm ">Tips and tricks for staying productive and focused while working from home.</p>
@@ -159,7 +159,7 @@
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-6 justify-center  mx-auto p-2">
                     <!-- Related Card 1 -->
                     <div class="bg-white rounded-lg overflow-hidden card-shadow flex flex-col sm:flex-row w-[608px] h-[349px] p-2 transition duration-300 hover:shadow-lg hover:scale-105">
-                        <img src="../Picture for Mini project/blog-page/blog-page010.png "alt="Training Challenges in Change Management and Development" class="w-[185px] h-[285px] sm:w-1/3 h-48 sm:h-auto object-cover p-2 rounded-2xl">
+                        <img src="../Picture for Mini project/blog-page/blog-page010.png "alt="Training Challenges in Change Management and Development" class="w-[185px] h-[285px] sm:w-1/3  sm:h-auto object-cover p-2 rounded-2xl">
                         <div class="p-4 flex-grow ml-1.5 pt-9 mt-[50px]">
                             <h4 class="font-semibold text-gray-800  text-xl mb-1">Training Challenges in Change Management and Development</h4>
                             <p class="text-gray-500 text-sm">Effective training supports change management, but challenges like low employee motivation, limited resources, and time constraints can hinder success.</p>
@@ -175,8 +175,8 @@
                     </div>
                     <!-- Related Card 2 -->
                     <div class="bg-white rounded-lg overflow-hidden card-shadow flex flex-col sm:flex-row w-[608px] h-[349px] p-2 transition duration-300 hover:shadow-lg hover:scale-105">
-                        <img src="../Picture for Mini project/blog-page/blog-page0011.png" alt="The Future of Training"class="w-[185px] h-[285px] sm:w-1/3 h-48 sm:h-auto object-cover p-2 rounded-2xl">
-                        <div class="p-4 flex-grow mt-[80px] ">
+                        <img src="../Picture for Mini project/blog-page/blog-page0011.png" alt="The Future of Training"class="w-[185px] h-[285px] sm:w-1/3  sm:h-auto object-cover p-2 rounded-2xl">
+                        <div class="p-4 flex-grow ml-1.5 mt-[80px] ">
                             <h4 class="font-semibold text-gray-800  text-xl mb-1">The Future of Training</h4>
                             <p class="text-gray-500 text-sm">Training is essential for driving growth and smooth transitions in change management and organizational development.</p>
                             <!-- Avatar Name and Date -->
