--- a/src/Login.html
+++ b/src/Login.html
@@ -47,7 +47,7 @@
     <div class="w-[900px] h-[630px] max-w-4xl bg-white rounded-xl shadow-2xl flex flex-col md:flex-row overflow-hidden">
 
         <div class="md:w-1/2 h-64 md:h-auto relative hidden md:block">
-          <img src="./Picture for Mini project/image 78.png" alt="Learning" class="w-full h-full object-cover" />
+          <img src="../Picture for Mini project/image 78.png" alt="Learning" class="w-full h-full object-cover" />
           <div class="absolute bottom-0 w-full bg-black text-white text-center py-7 text-lg font-bold leading-relaxed">
             Learn Anywhere. Grow Everywhere.
           </div>
@@ -58,8 +58,8 @@
             <h1 class="text-2xl font-medium text-center text-gray-800 mb-10 ">Welcome to VRean</h1>
             
             <div class="flex justify-center gap-4 mb-6">
-                <span class="px-6 py-2 bg-blue-600 text-white rounded-xl font-medium shadow ">log In</span>
-                <span class="px-6 py-2 bg-blue-400 text-white rounded-xl font-medium ">Sign Up</span>
+                <span class="px-6 py-2 bg-blue-600 text-white rounded-xl font-medium shadow "><a href="./Login.html">log In</a></span>
+                <span class="px-6 py-2 bg-blue-400 text-white rounded-xl font-medium "><a href="./Register.html">Sign Up</a></span>
             </div>
             <form class="space-y-6 mt-1">
             <!-- Username -->
@@ -111,7 +111,7 @@
               <!-- Submit -->
               <button type="submit"
                       class="w-full  py-3 rounded-xl bg-gradient-to-r from-blue-500 to-blue-600 text-white shadow-md hover:from-blue-600 hover:to-blue-700 transition">
-                Login
+               <a href="./after-login.html"> Login</a>
               </button>
             </form>
 
