--- a/src/contact.html
+++ b/src/contact.html
@@ -4,43 +4,96 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact Us</title>
+    <link rel="stylesheet" href="../css/output.css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
     <style>
       body {
         font-family: "Inter", sans-serif;
         background-color: #f0f2f5; /* Light gray background */
       }
+      .error-message {
+        color: #ef4444; /* Red color for errors */
+        font-size: 0.875rem; /* Small text */
+        margin-top: 0.25rem;
+      }
+      .modal {
+        transition: opacity 0.3s ease-in-out;
+      }
+      .modal.hidden {
+        opacity: 0;
+        pointer-events: none;
+      }
+      .modal.flex {
+        opacity: 1;
+        pointer-events: auto;
+      }
     </style>
   </head>
-  <body class="flex flex-col min-h-screen">
-    <header class="bg-white shadow-sm rounded-lg block sticky top-0 z-40" data-aos="fade-down">
-            <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
-                <div class="flex items-center space-x-2">
-                     <div class="w-16 h-16 bg-white rounded-full flex items-center justify-center text-white font-bold text-lg">
-                        <img src="../Picture for Mini project/image 6-1.png" alt="">
-                    </div>
-                    <span class="text-xl font-bold text-gray-800">E-Learning</span>
-                </div>
-    
-                <ul class="hidden md:flex items-center space-x-8">
-                    <li><a href="./after-login.html" class="text-gray-600 hover:text-blue-600">Home</a></li>
-                    <li><a href="./about.html" class="text-gray-600 hover:text-blue-600">About Us</a></li>
-                    <li><a href="./course.html" class="text-gray-600 hover:text-blue-600">Courses</a></li>
-                    <li><a href="./Blog.html" class="text-gray-600 hover:text-blue-600">Blog</a></li>
-                    <li><a href="./contact.html" class="text-gray-600 hover:text-blue-600">Contact</a></li>
-                </ul>
-                <div class="relative flex items-center gap-5">
-                    <i class=" text-2xl fa-solid fa-moon cursor-pointer"></i>
-                    <div id="user-menu-button" class="flex items-center space-x-4 cursor-pointer">
-                        <img src="../Picture for Mini project/image 12-1.png" alt="User Avatar" class="w-10 h-10 rounded-full">
-                    </div>
-                </div>
-            </nav>
-        </header>
+  <body>
+    <header class="bg-white shadow-sm rounded-lg block sticky top-0 z-40">
+      <nav
+        class="container mx-auto px-6 py-4 flex justify-between items-center"
+      >
+        <div class="flex items-center space-x-2">
+          <div
+            class="w-16 h-16 bg-white rounded-full flex items-center justify-center text-white font-bold text-lg"
+          >
+            <img src="../Picture for Mini project/image 6-1.png" alt="" />
+          </div>
+          <span class="text-xl font-bold text-gray-800">VRean</span>
+        </div>
+
+        <ul class="hidden md:flex items-center space-x-8">
+          <li>
+            <a
+              href="./after-login.html"
+              class="text-gray-600 hover:text-blue-600"
+              >Home</a
+            >
+          </li>
+          <li>
+            <a href="./about.html" class="text-gray-600 hover:text-blue-600"
+              >About Us</a
+            >
+          </li>
+          <li>
+            <a href="./course.html" class="text-gray-600 hover:text-blue-600"
+              >Courses</a
+            >
+          </li>
+          <li>
+            <a href="./Blog.html" class="text-gray-600 hover:text-blue-600"
+              >Blog</a
+            >
+          </li>
+          <li>
+            <a href="./contact.html" class="text-gray-600 hover:text-blue-600"
+              >Contact</a
+            >
+          </li>
+        </ul>
+        <div class="relative flex items-center gap-5">
+          <div
+            id="user-menu-button"
+            class="flex items-center space-x-4 cursor-pointer"
+          >
+            <img
+              src="../Picture for Mini project/image 12-1.png"
+              alt="User Avatar"
+              class="w-10 h-10 rounded-full"
+            />
+          </div>
+        </div>
+      </nav>
+    </header>
 
     <section class="py-16 text-center">
       <h1 class="text-4xl md:text-5xl font-bold text-gray-800 mb-4">
@@ -60,7 +113,7 @@
           <h2 class="text-2xl font-semibold text-gray-800 mb-6">
             Send us a Message
           </h2>
-          <form id="contactForm" class="space-y-6">
+          <form id="contactForm" class="space-y-6" novalidate>
             <div>
               <label
                 for="full-name"
@@ -73,7 +126,11 @@
                 name="fullName"
                 placeholder="John Doe"
                 class="w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500"
+                required
               />
+              <p id="full-name-error" class="error-message hidden">
+                Full Name is required.
+              </p>
             </div>
             <div>
               <label
@@ -87,7 +144,11 @@
                 name="email"
                 placeholder="you@example.com"
                 class="w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500"
+                required
               />
+              <p id="email-error" class="error-message hidden">
+                A valid Email Address is required.
+              </p>
             </div>
             <div>
               <label
@@ -101,7 +162,11 @@
                 name="subject"
                 placeholder="Course inquiry"
                 class="w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500"
+                required
               />
+              <p id="subject-error" class="error-message hidden">
+                Subject is required.
+              </p>
             </div>
             <div>
               <label
@@ -115,7 +180,11 @@
                 rows="5"
                 placeholder="Your message here..."
                 class="w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 resize-y"
+                required
               ></textarea>
+              <p id="message-error" class="error-message hidden">
+                Message is required.
+              </p>
             </div>
             <button
               type="submit"
@@ -196,7 +265,7 @@
           </div>
           <div class="mt-6">
             <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3908.6314781327565!2d104.89921187476435!3d11.578254588623484!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x310951e96d257a6f%3A0x6b66703c5fc0c7cc!2sScience%20and%20Technology%20Advanced%20Development%20Co.%2C%20Ltd.!5e0!3m2!1sen!2skh!4v1752913112447!5m2!1sen!2skh"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3908.790906666144!2d104.89791431478144!3d11.564771991787162!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3109513ad2746187%3A0xc3cf9704c7d0e31e!2sSt%20562%2C%20Phnom%20Penh!5e0!3m2!1sen!2skh!4v1678252277490!5m2!1sen!2skh"
               class="w-full h-96 rounded-md"
               style="border: 0"
               allowfullscreen=""
@@ -282,20 +351,58 @@
 
       <div class="text-center mt-8 pt-8 border-t border-gray-700">
         <p class="text-gray-500 text-sm mt-4">
-          © 2023 Vlearn. All rights reserved.
+          © 2023 VRean. All rights reserved.
         </p>
       </div>
     </footer>
 
+    <div
+      id="success-modal"
+      class="fixed inset-0 bg-gray-600 bg-opacity-75 flex items-center justify-center z-50 hidden modal"
+    >
+      <div
+        class="bg-white p-8 rounded-lg shadow-xl max-w-sm w-full text-center"
+      >
+        <div class="flex justify-center mb-4">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-16 w-16 text-green-500"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+            stroke-width="2"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"
+            />
+          </svg>
+        </div>
+        <h3 class="text-2xl font-bold text-gray-800 mb-3">Success!</h3>
+        <p class="text-gray-600 mb-6">
+          Your message has been sent successfully.
+        </p>
+        <button
+          id="ok-button"
+          class="bg-blue-600 text-white py-2 px-6 rounded-md font-semibold hover:bg-blue-700 transition duration-300"
+        >
+          OK
+        </button>
+      </div>
+    </div>
+
     <script>
-      // Mobile menu toggle
+      // Mobile menu toggle (existing functionality)
       const menuToggle = document.getElementById("menu-toggle");
       const navLinks = document.getElementById("nav-links");
 
-      menuToggle.addEventListener("click", () => {
-        navLinks.classList.toggle("hidden");
-        navLinks.classList.toggle("flex");
-      });
+      if (menuToggle && navLinks) {
+        menuToggle.addEventListener("click", () => {
+          navLinks.classList.toggle("hidden");
+          navLinks.classList.toggle("flex");
+        });
+      }
 
       // Form validation and submission
       const contactForm = document.getElementById("contactForm");
@@ -304,25 +411,136 @@
       const subjectInput = document.getElementById("subject");
       const messageInput = document.getElementById("message");
 
+      // Error message elements
+      const fullNameError = document.getElementById("full-name-error");
+      const emailError = document.getElementById("email-error");
+      const subjectError = document.getElementById("subject-error");
+      const messageError = document.getElementById("message-error");
+
+      // Success modal elements
+      const successModal = document.getElementById("success-modal");
+      const okButton = document.getElementById("ok-button");
+
+      // Function to show error message
+      function showError(element, message, errorElement) {
+        element.classList.add("border-red-500");
+        errorElement.textContent = message;
+        errorElement.classList.remove("hidden");
+      }
+
+      // Function to hide error message
+      function hideError(element, errorElement) {
+        element.classList.remove("border-red-500");
+        errorElement.classList.add("hidden");
+      }
+
+      // Validate individual fields on input/change
+      fullNameInput.addEventListener("input", () => {
+        if (fullNameInput.value.trim() !== "") {
+          hideError(fullNameInput, fullNameError);
+        }
+      });
+
+      emailInput.addEventListener("input", () => {
+        if (emailInput.value.trim() !== "" && emailInput.checkValidity()) {
+          hideError(emailInput, emailError);
+        }
+      });
+
+      subjectInput.addEventListener("input", () => {
+        if (subjectInput.value.trim() !== "") {
+          hideError(subjectInput, subjectError);
+        }
+      });
+
+      messageInput.addEventListener("input", () => {
+        if (messageInput.value.trim() !== "") {
+          hideError(messageInput, messageError);
+        }
+      });
+
       contactForm.addEventListener("submit", function (event) {
         event.preventDefault(); // Prevent the default form submission
 
-        // Check if all fields are filled
-        if (
-          fullNameInput.value.trim() === "" ||
-          emailInput.value.trim() === "" ||
-          subjectInput.value.trim() === "" ||
-          messageInput.value.trim() === ""
-        ) {
-          alert("Error: Please fill in all fields.");
+        let isValid = true;
+
+        // Validate Full Name
+        if (fullNameInput.value.trim() === "") {
+          showError(fullNameInput, "Full Name is required.", fullNameError);
+          isValid = false;
         } else {
-          alert("Message sent successfully!");
+          hideError(fullNameInput, fullNameError);
+        }
+
+        // Validate Email Address
+        if (emailInput.value.trim() === "") {
+          showError(emailInput, "Email Address is required.", emailError);
+          isValid = false;
+        } else if (!emailInput.checkValidity()) {
+          showError(
+            emailInput,
+            "Please enter a valid email address.",
+            emailError
+          );
+          isValid = false;
+        } else {
+          hideError(emailInput, emailError);
+        }
+
+        // Validate Subject
+        if (subjectInput.value.trim() === "") {
+          showError(subjectInput, "Subject is required.", subjectError);
+          isValid = false;
+        } else {
+          hideError(subjectInput, subjectError);
+        }
+
+        // Validate Message
+        if (messageInput.value.trim() === "") {
+          showError(messageInput, "Message is required.", messageError);
+          isValid = false;
+        } else {
+          hideError(messageInput, messageError);
+        }
+
+        if (isValid) {
+          // If all fields are valid, show the success modal
+          successModal.classList.remove("hidden");
+          successModal.classList.add("flex");
+
           // Optionally, clear the form fields after successful submission
           fullNameInput.value = "";
           emailInput.value = "";
           subjectInput.value = "";
           messageInput.value = "";
+
+          // Hide all error messages after successful submission
+          hideError(fullNameInput, fullNameError);
+          hideError(emailInput, emailError);
+          hideError(subjectInput, subjectError);
+          hideError(messageInput, messageError);
         }
+      });
+
+      // Hide success modal when "OK" button is clicked
+      okButton.addEventListener("click", () => {
+        successModal.classList.add("hidden");
+        successModal.classList.remove("flex");
+      });
+
+      // Optional: Hide success modal when clicking outside the modal content
+      successModal.addEventListener("click", (event) => {
+        if (event.target === successModal) {
+          successModal.classList.add("hidden");
+          successModal.classList.remove("flex");
+        }
+      });
+      // Hide success modal when "OK" button is clicked
+      okButton.addEventListener("click", () => {
+        successModal.classList.add("hidden");
+        successModal.classList.remove("flex");
+        // Redirect to 'after-login.html'
+        window.location.href = "after-login.html";
       });
     </script>
   </body>
