--- a/src/Blog.html
+++ b/src/Blog.html
@@ -478,19 +478,24 @@
           </ul>
         </div>
 
-        <div class="text-center">
+<div
+          class="text-center"
+          data-aos="fade-up"
+          data-aos-duration="1000"
+          data-aos-delay="500"
+        >
           <h3 class="text-xl font-bold mb-4">Contact Us</h3>
           <div class="flex justify-center space-x-6 text-2xl">
-            <a href="#" class="hover:text-blue-400"
+            <a href="#" class="hover:text-blue-400" aria-label="Facebook"
               ><i class="fab fa-facebook-f"></i
             ></a>
-            <a href="#" class="hover:text-blue-400"
+            <a href="#" class="hover:text-blue-400" aria-label="Twitter"
               ><i class="fab fa-twitter"></i
             ></a>
-            <a href="#" class="hover:text-blue-400"
+            <a href="#" class="hover:text-blue-400" aria-label="Instagram"
               ><i class="fab fa-instagram"></i
             ></a>
-            <a href="#" class="hover:text-blue-400"
+            <a href="#" class="hover:text-blue-400" aria-label="LinkedIn"
               ><i class="fab fa-linkedin-in"></i
             ></a>
           </div>
