--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>VRean - Studying Online is now much easier</title>
-    <link rel="stylesheet" href="../css/output.css">
-    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+    <title>Vlearn - Studying Online is now much easier</title>
+    <script src="https://cdn.tailwindcss.com"></script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -21,7 +20,7 @@
         background-color: #f8f9fa;
       }
       .hero-bg {
-        background-color: #172661;
+        background-color: #3f51b5;
       }
       .btn-primary {
         background-color: #4caf50; /* Green */
@@ -87,10 +86,10 @@
       <div class="flex items-center" data-aos="fade-right">
         <img
           src="./Picture for Mini project/image 6-1.png"
-          alt="VRean Logo"
+          alt="Vlearn Logo"
           class="h-10 w-10 rounded-full mr-2"
         />
-        <span class="text-2xl font-bold text-gray-800">VRean</span>
+        <span class="text-2xl font-bold text-gray-800">Vlearn</span>
       </div>
       <div class="hidden md:flex space-x-8" data-aos="fade-down">
         <a href="" class="text-gray-600 hover:text-blue-600 font-medium"
@@ -135,7 +134,7 @@
           Studying Online is now much easier
         </h1>
         <p class="text-lg mb-8">
-          VRean is an interesting platform that will teach you to learn an more
+          Vlearn is an interesting platform that will teach you to learn an more
           interactive way
         </p>
         <div
@@ -321,7 +320,7 @@
         data-aos-delay="300"
       >
         <img
-          src="./Picture for Mini project/image 116.png"
+          src="./Picture for Mini project/image 114-1.png"
           alt=""
           width="70px"
         />
@@ -344,7 +343,7 @@
           <p class="text-blue-600 font-semibold mb-2 uppercase">Testimonial</p>
           <h2 class="text-3xl font-bold text-gray-800 mb-4">What They Say?</h2>
           <p class="text-gray-600 mb-6">
-            VRean has got more than 100% positive ratings from our users around
+            Vlearn has got more than 100% positive ratings from our users around
             the world.
           </p>
           <p class="text-gray-600">
@@ -515,7 +514,7 @@
 
       <div class="text-center mt-8 pt-8 border-t border-gray-700">
         <p class="text-gray-500 text-sm mt-4">
-          &copy; 2023 VRean. All rights reserved.
+          &copy; 2023 Vlearn. All rights reserved.
         </p>
       </div>
     </footer>
